--- a/Assignment-12_102316028.ipynb
+++ b/Assignment-12_102316028.ipynb
@@ -6,7 +6,7 @@
         "id": "bRsejfOeoQ_S"
       },
       "source": [
-        "**Assignment 12 CC By Yash Singhal(102316047)**"
+        "**Assignment 12 CC Bymadhav(102316028)**"
       ]
     },
     {
